--- a/src/Pay.css
+++ b/src/Pay.css
@@ -78,4 +78,5 @@
          border:3px solid rgb(244, 46, 79);
       background-color:white;
        color:rgb(244, 46, 79);
+   border-radius:10px;
                                       }
