--- a/src/Pay.css
+++ b/src/Pay.css
@@ -14,6 +14,11 @@
        margin: 7px;
    }
    
+   .error p {
+       color: red;
+       font-size: 13px;
+   }
+   
    .pay-info {
        margin-top: 30px;
        margin-left: 15px;
