--- a/src/Pay.css
+++ b/src/Pay.css
@@ -1,81 +1,202 @@
-   .pay-con {
-       width: 98%;
-       display: flex;
-       margin-top: 100px;
-       margin: 10px;
-       margin-top: 100px;
-       background-color: white;
-       border-radius: 7px;
-   }
-   
-   .pay-con .pay-img img {
-       width: 150px;
-       height: 150px;
-       margin: 7px;
-   }
-   
-   .error p {
-       color: red;
-       font-size: 13px;
-   }
-   
-   .pay-info {
-       margin-top: 30px;
-       margin-left: 15px;
-   }
-   
-   .pay-info h3 {
-       margin-left: 10px;
-       font-size: 23px;
-       color: green;
-       font-family: "Playwrite DE Grund", cursive;
-   }
-   
-   .pay-details {
-       margin: 10px;
-       width: 98%;
-       padding: 10px 0px 10px 0px;
-       margin-top: 20px;
-       background-color: white;
-       border-radius: 7px;
-   }
-   
-   .pay-details h1 {
-       margin-top: 10px;
-       margin-left: 10px;
-       font-size: 27px;
-       color: rgb(108, 107, 107);
-   }
-   
-   .pay-details p {
-       font-family: "Playwrite DE Grund", cursive;
-       font-size: 15px;
-   }
-   
-   .address input {
-       width: 95%;
-       height: 45px;
-       border: none;
-       margin-top: 10px;
-       margin-left: 10px;
-       padding: 2px;
-       margin-left: 10px;
-       outline: skyblue;
-       border-radius: 7px;
-   }
-   
-   .address {
-       margin-bottom: 20px;
-   }
-   
-   .buys button {
-       width: 100%;
-       height: 45px;
-       background-color: rgb(244, 46, 79);
-       color: white;
-       border: none;
-       margin: 3px;
-       margin-left: 10px;
-       margin-bottom: 40px;
-       border-radius: 2px;
-   }
+    .nav {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+        padding: 10px 20px;
+        height: 40px;
+        box-shadow: 5px 10px 8px 0px rgba(0, 0, 0, 0.1);
+    }
+    
+    .pay-con {
+        width: 48%;
+        display: flex;
+        margin: 10px;
+        border-radius: 7px;
+        border: 1px solid grey;
+    }
+    
+    .pay-container {
+        display: flex;
+        margin-top: 30px;
+    }
+    
+    .pay-img img {
+        width: 200px;
+        height: 200px;
+        margin: 7px;
+    }
+    
+    .error p {
+        color: red;
+        font-size: 13px;
+    }
+    
+    .pay-info {
+        margin-top: 30px;
+        margin-left: 15px;
+    }
+    
+    .pay-info h3 {
+        margin-left: 10px;
+        font-size: 23px;
+        color: green;
+        font-family: "Playwrite DE Grund", cursive;
+    }
+    
+    .pay-details {
+        margin: 10px;
+        width: 48%;
+        padding: 10px 0px 10px 0px;
+        background-color: white;
+        border-radius: 7px;
+        border: 1px solid grey;
+    }
+    
+    .pay-details h1 {
+        margin-top: 10px;
+        margin-left: 10px;
+        font-size: 27px;
+        color: rgb(108, 107, 107);
+    }
+    
+    .pay-details p {
+        font-family: "Playwrite DE Grund", cursive;
+        font-size: 15px;
+    }
+    
+    .address input {
+        width: 500px;
+        height: 45px;
+        border: 1px solid grey;
+        ;
+        margin-top: 10px;
+        margin-left: 10px;
+        padding: 2px;
+        margin-left: 10px;
+        outline: skyblue;
+        border-radius: 7px;
+        margin: 10px;
+    }
+    
+    .address {
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .buys button {
+        width: 60%;
+        height: 45px;
+        background-color: rgb(244, 46, 79);
+        color: white;
+        border: none;
+        margin: 3px;
+        margin-left: 10px;
+        margin-bottom: 40px;
+        border-radius: 2px;
+    }
+    
+    .buys button:hover {
+        border: 1px solid rgb(244, 46, 79);
+        background-color: white;
+        color: rgb(244, 46, 79);
+        border-radius: 5px;
+    }
+    
+    @media (max-width: 768px) {
+        .nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            height: 40px;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 100;
+        }
+        .pay-con {
+            width: 98%;
+            display: flex;
+            margin-top: 100px;
+            margin: 10px;
+            margin-top: 100px;
+            border-radius: 7px;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.1), 2px -2px 4px rgba(0, 0, 0, 0.1), -2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .pay-con .pay-img img {
+            width: 150px;
+            height: 150px;
+            margin: 7px;
+        }
+        .error p {
+            color: red;
+            font-size: 13px;
+        }
+        .pay-info {
+            margin-top: 30px;
+            margin-left: 15px;
+        }
+        .pay-container {
+            display: block;
+        }
+        .pay-info h3 {
+            margin-left: 10px;
+            font-size: 23px;
+            color: green;
+            font-family: "Playwrite DE Grund", cursive;
+        }
+        .pay-details {
+            margin: 10px;
+            width: 98%;
+            padding: 10px 0px 10px 0px;
+            margin-top: 20px;
+            background-color: white;
+            border-radius: 7px;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.1), 2px -2px 4px rgba(0, 0, 0, 0.1), -2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .pay-details h1 {
+            margin-top: 10px;
+            margin-left: 10px;
+            font-size: 27px;
+            color: rgb(108, 107, 107);
+        }
+        .pay-details p {
+            font-family: "Playwrite DE Grund", cursive;
+            font-size: 15px;
+        }
+        .address input {
+            width: 98%;
+            height: 45px;
+            border: 1px solid grey;
+            margin-top: 10px;
+            padding: 2px;
+            outline: skyblue;
+            border-radius: 7px;
+            margin: 3px;
+        }
+        .address {
+            margin-bottom: 20px;
+            display: block;
+        }
+        .buys button {
+            width: 100%;
+            height: 45px;
+            background-color: rgb(244, 46, 79);
+            color: white;
+            border: none;
+            margin: 3px;
+            margin-left: 10px;
+            margin-bottom: 40px;
+            border-radius: 2px;
+        }
+        .buys button:hover {
+            border: 1px solid rgb(244, 46, 79);
+            background-color: white;
+            color: rgb(244, 46, 79);
+            border-radius: 5px;
+        }
+    }
