--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,9 @@
                                                  .container .shirt-con:hover{       
                                                       
                                                           
-                                                        border:1px solid grey;
+                                                     box-shadow: 0 0 10px 3px rgba(0, 255, 255, 0.8), 
+              0 0 20px 3px rgba(0, 255, 255, 0.6), 
+              0 0 30px 3px rgba(0, 255, 255, 0.4);
                                                    border-radius:4px;
                                                  }
                                                         h3 {
