--- a/src/App.css
+++ b/src/App.css
@@ -95,8 +95,9 @@
                                                  .container .shirt-con:hover{       
                                                       
                                                           
-                                                    box-shadow: 0 0 3px 1px rgba(0, 255, 255, 0.2), 
-              0 0 6px 1px rgba(0, 255, 255, 0.1);
+                                                     box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.4), 
+              0 0 10px 2px rgba(0, 255, 255, 0.3), 
+              0 0 15px 2px rgba(0, 255, 255, 0.2);
                                                    border-radius:4px;
                                                  }
                                                         h3 {
