--- a/src/Pay.css
+++ b/src/Pay.css
@@ -156,7 +156,7 @@
             margin-top: 20px;
             background-color: white;
             border-radius: 7px;
-            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.1), 2px -2px 4px rgba(0, 0, 0, 0.1), -2px 2px 4px rgba(0, 0, 0, 0.1);
+            border:1px solid grey;
         }
         .pay-details h1 {
             margin-top: 10px;
@@ -169,7 +169,7 @@
             font-size: 15px;
         }
         .address input {
-            width: 98%;
+            width: 94%;
             height: 45px;
             border: 1px solid grey;
             margin-top: 10px;
