--- a/src/Pay.css
+++ b/src/Pay.css
@@ -177,13 +177,14 @@
             outline: skyblue;
             border-radius: 7px;
             margin: 3px;
+            margin-left:5px;
         }
         .address {
             margin-bottom: 20px;
             display: block;
         }
         .buys button {
-            width: 100%;
+            width: 94%;
             height: 45px;
             background-color: rgb(244, 46, 79);
             color: white;
