--- a/src/Pay.css
+++ b/src/Pay.css
@@ -74,7 +74,7 @@
         margin-top: 10px;
         margin-left: 10px;
         padding: 2px;
-        margin-left: 10px;
+       
         outline: skyblue;
         border-radius: 7px;
         margin: 10px;
@@ -177,14 +177,15 @@
             outline: skyblue;
             border-radius: 7px;
             margin: 3px;
-            margin-left:5px;
+            margin-right:-10px;
+         
         }
         .address {
             margin-bottom: 20px;
             display: block;
         }
         .buys button {
-            width: 94%;
+            width: 96%;
             height: 45px;
             background-color: rgb(244, 46, 79);
             color: white;
@@ -192,7 +193,7 @@
             margin: 3px;
             margin-left: 10px;
             margin-bottom: 40px;
-            border-radius: 2px;
+            border-radius: 4px;
         }
         .buys button:hover {
             border: 1px solid rgb(244, 46, 79);
